Completes styling and functionality

--- a/src/components/Atoms/Text/Info.scss
+++ b/src/components/Atoms/Text/Info.scss
@@ -2,6 +2,13 @@
 
 .info {
     font-family: $font-family-primary;
-    color: $color-grey;
-    font-size: $font-size-medium;
+    color: lighten($color-grey, 10);
+
+    &--small {
+        font-size: $font-size-small;
+    }
+
+    &--medium {
+        font-size: $font-size-medium;
+    }
 }
