--- a/src/theming/config.scss
+++ b/src/theming/config.scss
@@ -2,12 +2,13 @@
 $font-family-primary: 'metabold_roman', arial;
 
 // font size
-$font-size-medium: 18px;
+$font-size-small: 13px;
+$font-size-medium: 15px;
 
-$font-size-h4: 18px;
-$font-size-h3: 23px;
-$font-size-h2: 28px;
-$font-size-h1: 32px;
+$font-size-h4: 15px;
+$font-size-h3: 20px;
+$font-size-h2: 25px;
+$font-size-h1: 30px;
 
 // colors
 $color-text-title: #1f1f1f;
